tests/fixtures/nupm/rejected/unknown-type/overlay/mod.nu
export def main [] { "unknown type package" }
